# cpp_utils

./: CMakeLists.txt  Citation.cff  Readme.md
include/: StageBase.h  clitools.h  jsontools.h  opencvtools.h  utils.h
src/: StageBase.cpp  clitools.cpp  jsontools.cpp  opencvtools.cpp
